# neuralgraft

./: .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml
docs/proof_of_concept/: RESULTS.md
examples/: cross_architecture_graft.py  quickstart.py
neuralgraft/: __init__.py  __main__.py  cli.py  codecs.py  forge.py  harvester.py  prober.py  surgeon.py
tests/: test_prober.py  test_surgeon.py
