[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralgraft"
version = "1.0.0"
description = "Zero-training capability transfer for diffusion models. Hours of model training in minutes."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Alokick Tech", email = "Alokickstudios@gmail.com" },
]
keywords = [
    "diffusion-models", "lora", "model-merging", "weight-surgery",
    "spectral-steering", "svd", "capability-transfer", "neural-graft",
    "zero-training", "model-optimization", "ai-video", "dit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
full = [
    "scikit-image>=0.21.0",     # For SSIM codec
    "torchvision>=0.16.0",      # For model-based codecs
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
neuralgraft = "neuralgraft.cli:main"

[project.urls]
Homepage = "https://github.com/alokickstudios-coder/neuralgraft"
Repository = "https://github.com/alokickstudios-coder/neuralgraft"
Issues = "https://github.com/alokickstudios-coder/neuralgraft/issues"
Documentation = "https://github.com/alokickstudios-coder/neuralgraft#readme"

[tool.setuptools.packages.find]
include = ["neuralgraft*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
